# django-mega-tutorial

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  code_review_001.md  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  tutorial-001.md  tutorial-002.md  tutorial-003.md  tutorial-004.md  tutorial-005.1_code_review_improvements.md  tutorial-005.md  tutorial-006.md  tutorial-007.1_fixing_defaults.md  tutorial-007.2.md  tutorial-007.3.md  tutorial-007.md  tutorial-007_combined.md
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_groups_customuser_user_permissions_and_more.py
accounts/templates/accounts/: logged_out.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  register.html
config/: celery.py  settings.py  urls.py
core/: email.py  tasks.py  tests.py  tests_email.py  urls.py  views.py
core/management/commands/: serve.py  serve_async.py  test_email.py
core/templates/core/: base.html  index.html
links/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
links/migrations/: 0001_initial.py
links/templates/links/: link_confirm_delete.html  link_detail.html  link_form.html  link_list.html
templates/: 400.html  403.html  404.html  500.html
templates/emails/: password_reset_email.html  password_reset_email.txt  welcome_email.html  welcome_email.txt
