[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["accounts", "config", "core", "links"]


[project]
name = "django-mega-tutorial"
version = "0.1.0"
description = "Production-minded Django SaaS starter template"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-environ",
    "whitenoise",
    "celery",
    "redis",
]

[project.optional-dependencies]
cheroot = ["cheroot"]
daphne = ["daphne"]
postgres = ["psycopg2-binary"]
flower = ["flower"]
dev = [
    "black",
    "mypy",
    "django-stubs",
    "bandit",
    "pre-commit",
    "coverage",
    "psycopg2-binary",
    "celery",
    "redis",
    "flower",
]
servers = ["cheroot", "daphne", "psycopg2-binary"]
all = [
    "black",
    "mypy",
    "django-stubs",
    "bandit",
    "pre-commit",
    "coverage",
    "cheroot",
    "daphne",
    "psycopg2-binary",
    "celery",
    "redis",
    "flower",
]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv"]
